Подогнать реализацию под add-director